# PowerGrid

./: .gitignore  .gitmodules  AbstractSimulation.h  BasicEnemy.h  CMakeLists.txt  Camera.h  Font.h  Makefile  PowerGrid.mk  PowerGrid.project  PowerGrid.txt  README.md  Terminal.h  TextureFactory.cpp  TextureFactory.h  VirtualObject.h  Window.h  WorldData.cpp  WorldData.h  build.bat  callbacks.cpp  callbacks.h  compile_flags.txt  debug.h  displayObject.cpp  displayObject.h  isplayObject.h  main.cpp  main.h  make_build.bat  math.cpp  math.h  my_debug.h  player.cpp  player.h  run.bat  shaderStore.cpp  shaderStore.h  shaders.h  shapes.cpp  (+1 more)
Dependencies/FreeType/: README.txt  freetype.lib
Dependencies/FreeType/include/: include - Shortcut.lnk
Dependencies/GLAD/include/glad/: glad.h
Dependencies/GLAD/src/: glad.c
cmakeFinders/: FindGLM.cmake
games/: example_game_3D.cpp  example_game_3D.h  squares_original.cpp  squares_original.h
games/opengl_examples/: SimpleCube.h  simple_square.h  textured_square.h  transformed_square.h
resources/fonts/: HarfBuzz Manual HarfBuzz Manual.URL  font_sources.txt
resources/shaders/: button.txt  char_fragment_shader.txt  char_vertex_shader.txt  forward_facing_line.txt  hud_vertex_shader.txt  index.txt  pc_basic_vertex.txt  phong_texture_fragment_shader.txt  sb7_basic_fragment.txt  sb7_basic_input_vertex.txt  sb7_basic_vertex.txt  scaled_square.txt  screen_oriented_colorable.vs  simple_colorable.fs  simple_colorable.vs  single_fragment_shader.txt  single_vertex_shader.txt  texture_2d_fragment_shader.txt  transform_3d_vertex_shader.txt  transform_vertex_shader.txt
src/: CMakeLists.txt  breakin.cpp  config.h  main.cpp  my_debug.cpp  my_debug.h
src/components/: AbstractSimulation.cpp  AbstractSimulation.h  ExplorableSimulation.h  MessageBus.h  TextureFactory.h  WorldData.cpp  WorldData.h
src/games/: Window.h  example_game_3D.cpp  example_game_3D.h  squares_original.cpp  squares_original.h
src/games/opengl_examples/: CameraExample.h  LightingExample.h  SimpleCube.h  SimpleSquare.h  TextRenderingExample.h  textured_square.h  transformed_square.h
src/graphics/: Mesh.h  Shader.h  TextureFactory.cpp  TextureFactory.h  shaderStore.cpp  shaderStore.h
src/gui/: Font.cpp  Font.h  Terminal.cpp  Terminal.h  Text.cpp  Text.h  Window.cpp  Window.h  callbacks.cpp  callbacks.h
src/helpers/: AbstractSimulation.cpp  BasicEnemy.h  Font.h  Shader.h  Text.h  Window.h  WorldData.cpp  WorldData.h  callbacks.cpp  callbacks.h  player.cpp  player.h  shaderStore.cpp  shaderStore.h  shapes.h
src/inputs/: AbstractKeyinput.h  glfwKeyInput.h  mouse.cpp  mouse.h
src/models/: Cube.h  TiledFloor.h
z_readings/: A Beginner's Guide to Coding Graphics Shaders.URL  Amit’s Game Programming Information.url  Articles - Harold Serrano _ Game Engine Developer.url  Buffer Object Streaming - OpenGL Wiki.URL  GLSL ProgrammingApplying Matrix Transformations - Wikibooks, open books for an open world.URL  Gamasutra Michael Kissner's Blog - Writing a Game Engine from Scratch - Part 1 Messaging.URL  Home - GameDev.net.URL  Introduction · Game Programming Patterns.URL  LearnOpenGL - Introduction.URL  NeHe Productions - Everything OpenGL.URL  The Book of Shaders.URL  Victor Gordan - YouTube.URL  Why is text rendering such a pain in the ass opengl.URL
